...
        android:background="@drawable/bg_pelanggaran"
        android:text="pelanggaran"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_prestasi" />

    <Button
        android:id="@+id/btn_prestasi"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/bg_prestasi"
        android:text="prestasi"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/darker_gray"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_satu"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_logout"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_margin="16dp"
                android:background="@drawable/bg_logout"
                android:text="Keluar"
                android:textColor="#1565c1"
                android:textSize="10sp" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
...
