...
            android:layout_marginRight="62dp"
            android:layout_marginTop="36.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!-- INPUT -->
            <EditText
                android:id="@+id/et_username"
                android:layout_toRightOf="@+id/username_icon"
                android:hint="Username"
                android:textSize="16sp"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
...
            android:layout_marginRight="62dp"
            android:layout_marginTop="12.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!-- INPUT -->
            <EditText
                android:id="@+id/et_password"
                android:layout_toRightOf="@+id/icon"
                android:hint="Password"
                android:textSize="16sp"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:maxLines="1"
...
        </RelativeLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginBottom="16dp"
            android:text="Login"
            android:background="@drawable/blue_fill__rounded_color"
            />


    </LinearLayout>

...
